crates/conduit-derive/tests/compile_fail/derive_tuple_struct.rs
use conduit_derive::Encode;
#[derive(Encode)]
struct Foo(u32, u32);
fn main() {}
